Step 8 hardening — standard env loader; remove window.__LP_ENV usage

--- a/public/admin/ab-dashboard.html
+++ b/public/admin/ab-dashboard.html
@@ -14,7 +14,8 @@
       .err { color: crimson; }
       a { color: #2563eb; font-weight: 700; text-decoration: none; }
     </style>
-  </head>
+    <script src="/assets/js/env-loader.js"></script>
+</head>
   <body>
     <div style="margin-bottom:10px;">
       <a href="/admin.html">← Back to Admin</a>
