--- a/public/learn.html
+++ b/public/learn.html
@@ -232,6 +232,7 @@
             .input-area { padding: 8px 12px; }
         }
     </style>
+  <script src="/assets/js/env-loader.js"></script>
 </head>
 <body>
 
