--- a/public/olympiad.html
+++ b/public/olympiad.html
@@ -572,6 +572,7 @@
             }
         }
     </style>
+  <script src="/assets/js/env-loader.js"></script>
 </head>
 <body>
     <div class="header">
