--- a/public/pricing.html
+++ b/public/pricing.html
@@ -40,6 +40,7 @@
 
         .footer-link { margin-top: 25px; color: #9CA3AF; font-size: 14px; text-decoration: none; }
     </style>
+  <script src="/assets/js/env-loader.js"></script>
 </head>
 <body>
 
