--- a/public/signup.html
+++ b/public/signup.html
@@ -210,7 +210,8 @@
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
-    </style></head>
+    </style>  <script src="/assets/js/env-loader.js"></script>
+</head>
 <body>
 
     <div class="card">
