--- a/public/upgrade.html
+++ b/public/upgrade.html
@@ -171,6 +171,7 @@
             display: inline-block;
         }
     </style>
+  <script src="/assets/js/env-loader.js"></script>
 </head>
 <body>
 
