--- a/public/admin.html
+++ b/public/admin.html
@@ -142,6 +142,7 @@
     .gate-box p{margin:0;color:var(--muted);font-size:13px;line-height:1.35}
     .gate-box .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
   </style>
+  <script src="/assets/js/env-loader.js"></script>
 </head>
 
 <body>
