--- a/public/admin/admin-payments.html
+++ b/public/admin/admin-payments.html
@@ -35,6 +35,7 @@
     .note{margin-top:8px;font-size:12px;color:var(--muted)}
     @media (max-width:900px){.form{grid-template-columns:1fr}}
   </style>
+  <script src="/assets/js/env-loader.js"></script>
 </head>
 
 <body>
