--- a/public/login.html
+++ b/public/login.html
@@ -42,7 +42,8 @@
         .footer-link a { color: var(--primary); text-decoration: none; font-weight: 600; }
         
         .error { color: #EF4444; font-size: 14px; text-align: center; margin-top: 15px; display: none; background: #FEF2F2; padding: 10px; border-radius: 6px; }
-    </style></head>
+    </style>  <script src="/assets/js/env-loader.js"></script>
+</head>
 <body>
 
     <div class="card">
