Fix auth boot: shared storageKey + /api/env in login/payments/subscriptions

--- a/public/login.html
+++ b/public/login.html
@@ -109,7 +109,7 @@
           auth: {
             persistSession: true,
             autoRefreshToken: true,
-            detectSessionInUrl: true
+            detectSessionInUrl: true,
             storageKey: 'logicpals.auth',
           }
         });
